# vp-bank-hackathon-workflow-assistant

./: .gitignore  Makefile  README.md  ai-workflow.conf  inmemory_store.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
dockers/: Dockerfile  build-image.sh  bump-version.sh  docker-compose.yml
example_workflow/: AI_Automated_HR_Workflow_for_CV_Analysis_and_Candidate_Evaluation.json  CV_Screening_with_OpenAI.json  Email.json  plan.json  workflow.json
models/: model_CreditCard_20250614_015533_encoder.pkl  model_CreditCard_20250615_022140.pkl  model_DebitCard_20250614_232800.pkl
src/: server.py  streamlit_app.py
src/agents/: __init__.py  agents_pool.py  chatbot.py  prompts.py  tools.py  utils.py  workflow_config_generator_agent.py  workflow_explain_chatbot.py  workflow_information.py  workflow_planner_chatbot.py
src/core/: llm.py  settings.py
src/database/: database_connector.py  inmem_database.py  mock_data.py
src/memory/: __init__.py
src/schema/: __init__.py  models.py  schema.py
src/service/: etl_router.py  service.py  utils.py
