[project]
name = "vp-bank-hackathon-worflow-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-mcp-adapters>=0.1.1",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.7",
    "langserve[all]>=0.3.1",
    "matplotlib>=3.10.3",
    "pydotplus>=2.0.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "langchain-anthropic>=0.3.15",
    "langchain-aws>=0.2.24",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.24",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.3",
    "langgraph-supervisor>=0.0.27",
    "langchain-chroma>=0.2.3",
    "duckduckgo-search>=8.0.2",
    "psycopg2-binary>=2.9.10",
    "langgraph-checkpoint>=2.0.26",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "psycopg-binary>=3.2.9",
    "streamlit>=1.45.1",
    "mlflow>=2.22.1",
    "shap>=0.47.2",
    "openpyxl>=3.1.5",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.2",
    "numpy>=1.26.4",
]
